--- a/templates/elements/oneliner-with-related.html
+++ b/templates/elements/oneliner-with-related.html
@@ -3,8 +3,8 @@
 {% block related %}
 	{% if oneliner.questions %}
 	{% with oneliner.questions as answers %}
-	<div class="alert-message block-message success related">
-	    <h3>Related questions</h3>
+	<div class="related">
+	    <h3 class="">Related questions</h3>
 	    <div class="questions">
 	    {% for answer in answers %}
 	    {% with answer.question as question %}
