--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -2,13 +2,13 @@
 
 {% block pagetitle %}bashoneliners.com{% endblock %}
 
+{% block pageheader %}bashoneliners.com{% endblock %}
+
 {% block keywords %}bash, ksh, shell, script, one-liner, oneliner, tips, tricks, linux, unix, vote, rank, rss, open-source, django, python, bazaar, launchpad, collaborate{% endblock %}
 
 {% block description %}A collection of practical or just pure awesome bash one-liners or shell script tips and tricks for GNU Linux, UNIX or BSD systems. Open, collaborative system, user friendly, with functions to contribute one-liners, request one-liners, search, rss feed, commenting, Open ID login. Open-source project, using Django, Python, jQuery, Bazaar, Launchpad, HTML5, Bootstrap from Twitter.{% endblock %}
 
 {% block content %}
-
-<h1>bashoneliners.com</h1>
 
 <p>Welcome to <strong>bashoneliners.com</strong>, a place for practical or just pure awesome bash <em>one-liners</em> or shell script tips and tricks for GNU Linux, UNIX or BSD systems.
 You can post a one-liner and share with the world,
