--- a/templates/main/mission.html
+++ b/templates/main/mission.html
@@ -2,13 +2,13 @@
 
 {% block pagetitle %}Mission statement{% endblock %}
 
+{% block pageheader %}Mission statement{% endblock %}
+
 {% block keywords %}{% endblock %}
 
 {% block description %}{% endblock %}
 
 {% block content %}
-
-<h1>Mission statement</h1>
 
 <p>This "mission statement" is the foundation of our website project.</p>
 
