--- a/templates/main/oneliner.html
+++ b/templates/main/oneliner.html
@@ -2,9 +2,9 @@
 
 {% block pagetitle %}One-Liner{% endblock %}
 
-{% block content %}
+{% block pageheader %}One-Liner{% endblock %}
 
-<h1>One-Liner</h1>
+{% block content %}
 
 {% include 'main/oneliners.html' %}
 
