--- a/templates/main/question.html
+++ b/templates/main/question.html
@@ -2,9 +2,9 @@
 
 {% block pagetitle %}Question{% endblock %}
 
-{% block content %}
+{% block pageheader %}Question{% endblock %}
 
-<h1>Question</h1>
+{% block content %}
 
 {% include 'main/questions.html' %}
 
