--- a/templates/main/search.html
+++ b/templates/main/search.html
@@ -2,9 +2,9 @@
 
 {% block pagetitle %}Search{% endblock %}
 
-{% block content %}
+{% block pageheader %}Search{% endblock %}
 
-<h1>Search</h1>
+{% block content %}
 
 {% include 'main/oneliners.html' %}
 
