--- a/templates/main/wishlist.html
+++ b/templates/main/wishlist.html
@@ -2,13 +2,13 @@
 
 {% block pagetitle %}Questions{% endblock %}
 
+{% block pageheader %}Questions{% endblock %}
+
 {% block keywords %}{% endblock %}
 
 {% block description %}{% endblock %}
 
 {% block content %}
-
-<h1>Questions</h1>
 
 <div style="margin-bottom: 2em">
 
@@ -16,7 +16,7 @@
 Feel free to ask for it here.</p>
 
 {% if user.is_authenticated %}
-<p><a href="{% url bashoneliners.main.views.new_question %}" class="btn primary">Post a question</a></p>
+<p><a href="{% url bashoneliners.main.views.new_question %}" class="btn btn-primary">Post a question</a></p>
 {% else %}
 <p>To post a question, please <a href="{% url bashoneliners.main.views.login %}">login</a> first.</p>
 {% endif %}
