--- a/templates/html5.html
+++ b/templates/html5.html
@@ -25,11 +25,9 @@
 
   <!-- CSS: implied media=all -->
   <!-- CSS concatenated and minified via ant build script-->
-  <!--
-  <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
-  -->
   <link rel="stylesheet" href="/media/css/smoothness/jquery-ui-1.8.17.custom.css">
-  <link rel="stylesheet" href="/media/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/media/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/media/bootstrap/css/bootstrap-responsive.min.css">
   <link rel="stylesheet" href="/media/css/bashoneliners.css">
   <!-- end CSS-->
 
@@ -42,14 +40,20 @@
 </head>
 
 <body>
+    
+    {% block navbar %}{% endblock %}
 
   <div id="container">
     <header>
     {% block header %}{% endblock %}
     </header>
-    <div id="main" role="main">
+
+    <section id="main" role="main">
+    <div class="container">
     {% block main %}{% endblock %}
     </div>
+    </section>
+
     <footer class="footer">
     {% block footer %}{% endblock %}
     </footer>
@@ -65,7 +69,6 @@
 
 
   <!-- scripts concatenated and minified via ant build script-->
-  <script src="http://twitter.github.com/bootstrap/1.4.0/bootstrap-dropdown.js"></script>
   <script defer src="/media/js/plugins.js"></script>
   <script defer src="/media/js/bashoneliners.js"></script>
   <!-- end scripts-->
@@ -73,8 +76,6 @@
     <script type="text/javascript">
 	<!--
 	$(document).ready(function() {
-	    $('.topbar').dropdown();
-
 	    {% block ready %}{% endblock %}
 	});
 	//-->
