--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -2,16 +2,16 @@
 
 {% block pagetitle %}{{ form.title }}{% endblock %}
 
+{% block pageheader %}{{ form.title }}{% endblock %}
+
 {% block keywords %}{% endblock %}
 
 {% block description %}{% endblock %}
 
 {% block content %}
 
-<h1>{{ form.title }}</h1>
-
 {% if question %}
-<div class="alert-message block-message info compact">
+<div class="alert alert-info compact">
     <p>This one-liner will be linked to the following question as a possible answer:</p>
     <blockquote>
 	<p><a href="{% url bashoneliners.main.views.question question.pk %}">{{ question.summary }}</a></p>
@@ -23,26 +23,28 @@
 </div>
 {% endif %}
 
-<form action="" method="post" class="form-stacked">{% csrf_token %}
+<form action="" method="post" class="">{% csrf_token %}
     {{ form.next_url.as_hidden }}
     <div class="non-field-errors">{{ form.non_field_errors }}</div>
     <div class="oneliner">
 	<h3>Summary of the one-liner<span class="required">*</span></h3>
-	<div class="hint">In one sentence, what does it do?</div>
+	<div class="help-block">In one sentence, what does it do?</div>
 	<div class="input">
 	    <div class="error">{{ form.summary.errors }}</div>
 	    <div class="summary">{{ form.summary }}</div>
 	</div>
 	
 	<h3>The one-liner<span class="required">*</span></h3>
-	<div class="hint"></div>
-	<div class="input">
+	<div class="help-block"></div>
+	<div class="input input-prepend">
 	    <div class="error">{{ form.line.errors }}</div>
-	    <div class="summary">{{ form.line }}</div>
+	    <div class="summary input-prepend">
+		<span class="add-on">bash$</span>
+		{{ form.line }}</div>
 	</div>
 	
 	<h3>Explanation<span class="required">*</span></h3>
-	<div class="hint">Try to use relevant keywords in the explanation, so that the one-liner is easier to find by search.
+	<div class="help-block">Try to use relevant keywords in the explanation, so that the one-liner is easier to find by search.
 	    <br/>Note: any html will be escaped, and the text will be formatted with <a class="help help-markdown" href="{% url bashoneliners.main.views.help_markdown %}">markdown</a>.
 	</div>
 	<div class="input">
@@ -51,7 +53,7 @@
 	</div>
 	
 	<h3>Limitations (optional)</h3>
-	<div class="hint">For example, if the one-liner might not work in some flavors of UNIX, etc.
+	<div class="help-block">For example, if the one-liner might not work in some flavors of UNIX, etc.
 	    <br/>Note: any html will be escaped, and the text will be formatted with <a class="help help-markdown" href="{% url bashoneliners.main.views.help_markdown %}">markdown</a>.
 	<div class="input">
 	    <div class="error">{{ form.limitations.errors }}</div>
@@ -59,15 +61,15 @@
 	</div>
 
 	<h3>Published</h3>
-	<div class="hint">If checked, the one-liner will be visible in public listings, and will be tweeted on Twitter with <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a></div>
+	<div class="help-block">If checked, the one-liner will be visible in public listings, and will be tweeted on Twitter with <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a></div>
 	<div class="input">
 	    <div class="error">{{ form.is_published.errors }}</div>
-	    <div class="is_published"><label>{{ form.is_published }} <span>Published</span></label></div>
+	    <div class="is_published"><label class="checkbox">{{ form.is_published }} <span>Published</span></label></div>
 	</div>
 
-	<p class="actions">
-	    {% for action in form.actions %}<input class="btn primary" type="submit" name="action" value="{{ action }}"/>{% endfor %}
-	    <a class="btn cancel" href="{{ form.next_url.value }}">Cancel</a>
+	<p class="form-actions">
+	    {% for action in form.actions %}<input class="btn btn-primary" type="submit" name="action" value="{{ action }}"/>{% endfor %}
+	    <a class="btn" href="{{ form.next_url.value }}">Cancel</a>
 	</p>
     </div>
 </form>
