--- a/templates/main/profile.html
+++ b/templates/main/profile.html
@@ -4,42 +4,40 @@
 
 {% block pagetitle %}{{ hacker.username }}{% endblock %}
 
+{% block pageheader %}{{ hacker.hackerprofile.display_name|default:hacker.username }}{% if user == hacker %}<a href="{% url bashoneliners.main.views.edit_profile %}" class="edit"></a>{% endif %}{% endblock %}
+
 {% block content %}
 
-<h1>{{ hacker.hackerprofile.display_name|default:hacker.username }}{% if user == hacker %}<a href="{% url bashoneliners.main.views.edit_profile %}" class="editable"></a>{% endif %}</h1>
-
-<table class="profile bordered-table">
-    {% if hacker.hackerprofile.twitter_name %}
-    <tr>
-	<th>Twitter name</th>
-	<td><a href="{{ hacker.hackerprofile.twitter_url }}">{{ hacker.hackerprofile.twitter_name }}</a></td>
-    </tr>
-    {% endif %}
-    {% if hacker.hackerprofile.blog_url %}
-    <tr>
-	<th>Blog URL</th>
-	<td>{{ hacker.hackerprofile.blog_url|default:'(not set)'|urlize }}</td>
-    </tr>
-    {% endif %}
-    {% if hacker.hackerprofile.homepage_url %}
-    <tr>
-	<th>Homepage URL</th>
-	<td>{{ hacker.hackerprofile.homepage_url|default:'(not set)'|urlize }}</td>
-    </tr>
-    {% endif %}
+{% if hacker.hackerprofile.twitter_name or hacker.hackerprofile.blog_url or hacker.hackerprofile.homepage_url %}
+<table class="profile table table-bordered">
+    <tbody>
+	<tr>
+	    <th>Twitter name</th>
+	    <td><a href="{{ hacker.hackerprofile.twitter_url }}">{{ hacker.hackerprofile.twitter_name }}</a></td>
+	</tr>
+	<tr>
+	    <th>Blog URL</th>
+	    <td>{{ hacker.hackerprofile.blog_url|default:'(not set)'|urlize }}</td>
+	</tr>
+	<tr>
+	    <th>Homepage URL</th>
+	    <td>{{ hacker.hackerprofile.homepage_url|default:'(not set)'|urlize }}</td>
+	</tr>
+    </tbody>
 </table>
+{% endif %}
 
-<h3>Questions (waiting to be answered)</h3>
+<h3>Questions asked (waiting for an answer)</h3>
 
 {% with questions_pending as questions %}
 {% include 'main/questions.html' %}
 {% endwith %}
 
 {% if user == hacker %}
-<p><a href="{% url bashoneliners.main.views.new_question %}" class="btn primary">Post a question</a></p>
+<p><a href="{% url bashoneliners.main.views.new_question %}" class="btn btn-primary">Post a question</a></p>
 {% endif %}
 
-<h3>Questions (answered)</h3>
+<h3>Questions asked (answered)</h3>
 
 {% with questions_answered as questions %}
 {% include 'main/questions.html' %}
@@ -50,7 +48,7 @@
 {% include 'main/oneliners.html' %}
 
 {% if user == hacker %}
-<p><a href="{% url bashoneliners.main.views.new_oneliner %}" class="btn primary">Post a One-Liner</a></p>
+<p><a href="{% url bashoneliners.main.views.new_oneliner %}" class="btn btn-primary">Post a One-Liner</a></p>
 {% endif %}
 
 <h3>Favourite one-liners</h3>
