--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
 	<p class="pull-right validators"> 
 	    <a href="http://www.dreamhost.com/r.cgi?455568"><img alt="This site hosted by DreamHost. Unlimited storage and bandwidth for only $8.95" src="/media/images/dreamhost.gif" /></a> 
 	    <a href="http://www.dreamhost.com/green.cgi"><img alt="Green Web Hosting! This site hosted by DreamHost." src="/media/images/green1.gif" height="31" /></a> 
-	    <a href="http://validator.w3.org/check?uri=referer"><img src="/media/images/valid-xhtml10.png" alt="Valid XHTML 1.0 Strict" /></a> 
+	    <a href="http://validator.w3.org/check?uri=referer"><img src="/media/images/valid-xhtml10.png" alt="Valid HTML5" /></a> 
 	</p> 
     </div>
 {% endblock %}
