moved templates/elements inside templates/main/elements because they should be part of main

--- a/templates/main/elements/oneliner-with-related.html
+++ b/templates/main/elements/oneliner-with-related.html
@@ -1,4 +1,4 @@
-{% extends 'elements/oneliner.html' %}
+{% extends 'main/elements/oneliner.html' %}
 
 {% block related %}
 	{% if oneliner.questions %}
@@ -8,7 +8,7 @@
 	    <div class="questions">
 	    {% for answer in answers %}
 	    {% with answer.question as question %}
-	    {% include 'elements/question.html' %}
+	    {% include 'main/elements/question.html' %}
 	    {% endwith %}
 	    {% endfor %}
 	    </div>
