moved everything that does not extend the base template to elements

--- a/templates/main/edit-oneliner.html
+++ b/templates/main/edit-oneliner.html
@@ -23,7 +23,7 @@
 </div>
 {% endif %}
 
-{% include 'main/edit-oneliner-form.html' %}
+{% include 'main/elements/edit-oneliner-form.html' %}
 
 {% endblock %}
 
