--- a/templates/main/edit-question.html
+++ b/templates/main/edit-question.html
@@ -16,7 +16,7 @@
     <li>You can track your questions on your <a href="{% url bashoneliners.main.views.profile %}">profile</a> page, and mark them <strong>Answered</strong> so they no longer appear in the list of questions. <em>(coming soon)</em></li>
 </ul>
 
-{% include 'main/edit-question-form.html' %}
+{% include 'main/elements/edit-question-form.html' %}
 
 {% endblock content %}
 
