--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -25,6 +25,6 @@ and <a href="{% url bashoneliners.main.views.sourcecode %}">source code</a> page
 
 <h2>Latest</h2>
 
-{% include 'main/oneliners.html' %}
+{% include 'main/elements/oneliners.html' %}
 
 {% endblock %}
