--- a/templates/main/wishlist.html
+++ b/templates/main/wishlist.html
@@ -26,7 +26,7 @@ Feel free to ask for it here.</p>
 {% if questions %}
 <h2>Recent questions</h2>
 
-{% include 'main/questions.html' %}
+{% include 'main/elements/questions.html' %}
 
 {% endif %}
 
