--- a/templates/main/elements/edit-question-form.html
+++ b/templates/main/elements/edit-question-form.html
@@ -17,14 +17,14 @@
 	</div>
 	
 	<h3>Published</h3>
-	<div class="help-block">If checked, the question will be visible on the <a href="{% url bashoneliners.main.views.wishlist %}">questions page</a>.</div>
+	<div class="help-block">If checked, the question will be visible on the <a href="{% url bashoneliners.main.views.question_list %}">questions page</a>.</div>
 	<div class="input">
 	    <div class="error">{{ form.is_published.errors }}</div>
 	    <div class="is_published"><label class="checkbox">{{ form.is_published }} Published</label></div>
 	</div>
 
 	<h3>Answered</h3>
-	<div class="help-block">If checked, the question will not be shown on the <a href="{% url bashoneliners.main.views.wishlist %}">questions page</a>.</div>
+	<div class="help-block">If checked, the question will not be shown on the <a href="{% url bashoneliners.main.views.question_list %}">questions page</a>.</div>
 	<div class="input">
 	    <div class="error">{{ form.is_answered.errors }}</div>
 	    <div class="is_answered"><label class="checkbox">{{ form.is_answered }} Answered</label></div>
