--- a/templates/main/pages/edit-question.html
+++ b/templates/main/pages/edit-question.html
@@ -11,7 +11,7 @@
 {% block content %}
 
 <ul>
-    <li>After you post a question, it will be listed on the <a href="{% url bashoneliners.main.views.wishlist %}">Questions</a> page, and other users can suggest (possibly many) one-liners that answer it.</li>
+    <li>After you post a question, it will be listed on the <a href="{% url bashoneliners.main.views.question_list %}">Questions</a> page, and other users can suggest (possibly many) one-liners that answer it.</li>
     <li>You will receive an email when someone suggests an answer. <em>(coming soon)</em></li>
     <li>You can track your questions on your <a href="{% url bashoneliners.main.views.profile %}">profile</a> page, and mark them <strong>Answered</strong> so they no longer appear in the list of questions. <em>(coming soon)</em></li>
 </ul>
