--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
 		    <li><a href="{% url bashoneliners.main.views.index %}">Latest</a></li>
 		    <li><a href="{% url bashoneliners.main.views.question_list %}">Questions</a></li>
 		    {% if user.is_authenticated %}
-		    <li><a href="{% url bashoneliners.main.views.new_oneliner %}">Post</a>
+		    <li><a href="{% url bashoneliners.main.views.oneliner_new %}">Post</a>
 		    {% endif %}
 		    <li><a href="{% url bashoneliners.urls.feed %}">RSS</a></li>
 		</ul>
