--- a/templates/main/elements/question.html
+++ b/templates/main/elements/question.html
@@ -1,7 +1,7 @@
     <div class="question well question-{{question.pk}}">
 	<h3 class="summary">
 	    <a href="{% url bashoneliners.main.views.question question.pk %}">{{ question.summary|capfirst }}</a>
-	    {% if user == question.user %}<a class="edit" href="{% url bashoneliners.main.views.edit_question question.pk %}">{% if not question.is_published %}<span class="draft">(Not published!)</span>{% endif %}</a>{% endif %}
+	    {% if user == question.user %}<a class="edit" href="{% url bashoneliners.main.views.question_edit question.pk %}">{% if not question.is_published %}<span class="draft">(Not published!)</span>{% endif %}</a>{% endif %}
 	</h3>
 	<blockquote>
 	    <p>{{ question.explanation }}</p>
@@ -12,7 +12,7 @@
 	</blockquote>
 
 	{% if user.is_authenticated and not question.is_answered %}
-	<p><a class="btn" href="{% url bashoneliners.main.views.new_oneliner question.pk %}">Post a one-liner that answers this!</a></p>
+	<p><a class="btn" href="{% url bashoneliners.main.views.oneliner_new question.pk %}">Post a one-liner that answers this!</a></p>
 	{% endif %}
 
 	{% block related %}
