--- a/templates/main/pages/profile.html
+++ b/templates/main/pages/profile.html
@@ -4,7 +4,7 @@
 
 {% block pagetitle %}{{ hacker.username }}{% endblock %}
 
-{% block pageheader %}{{ hacker.hackerprofile.display_name|default:hacker.username }}{% if user == hacker %}<a href="{% url bashoneliners.main.views.edit_profile %}" class="edit"></a>{% endif %}{% endblock %}
+{% block pageheader %}{{ hacker.hackerprofile.display_name|default:hacker.username }}{% if user == hacker %}<a href="{% url bashoneliners.main.views.profile_edit %}" class="edit"></a>{% endif %}{% endblock %}
 
 {% block content %}
 
@@ -34,7 +34,7 @@
 {% endwith %}
 
 {% if user == hacker %}
-<p><a href="{% url bashoneliners.main.views.new_question %}" class="btn btn-primary">Post a question</a></p>
+<p><a href="{% url bashoneliners.main.views.question_new %}" class="btn btn-primary">Post a question</a></p>
 {% endif %}
 
 <h3>Questions asked (answered)</h3>
@@ -48,7 +48,7 @@
 {% include 'main/elements/oneliners.html' %}
 
 {% if user == hacker %}
-<p><a href="{% url bashoneliners.main.views.new_oneliner %}" class="btn btn-primary">Post a One-Liner</a></p>
+<p><a href="{% url bashoneliners.main.views.oneliner_new %}" class="btn btn-primary">Post a One-Liner</a></p>
 {% endif %}
 
 <h3>Favourite One-Liners</h3>
