--- a/templates/main/pages/profile_edit.html
+++ b/templates/main/pages/profile_edit.html
@@ -13,27 +13,27 @@
 <form action="" method="post" class="">{% csrf_token %}
     <div class="non-field-errors">{{ form.non_field_errors }}</div>
     <div class="profile">
-	<label for="id_display_name">{{ form.display_name.label }}</label>
+	<h3>{{ form.display_name.label }}</h3>
 	<div class="input">
 	    <div class="error">{{ form.display_name.errors }}</div>
 	    <div class="help-block">Name to show instead of your username: {{ user.username }}</div>
 	    <div class="display_name">{{ form.display_name }}</div>
 	</div>
 	
-	<label for="id_twitter_name">{{ form.twitter_name.label }}</label>
+	<h3>{{ form.twitter_name.label }}</h3>
 	<div class="input input-prepend">
 	    <span class="add-on">@</span>
 	    <div class="error">{{ form.twitter_name.errors }}</div>
 	    <div id="prependedInput" class="twitter_name">{{ form.twitter_name }}</div>
 	</div>
 	
-	<label for="id_blog_url">{{ form.blog_url.label }}</label>
+	<h3>{{ form.blog_url.label }}</h3>
 	<div class="input">
 	    <div class="error">{{ form.blog_url.errors }}</div>
 	    <div class="blog_url">{{ form.blog_url }}</div>
 	</div>
 	
-	<label for="id_homepage_url">{{ form.homepage_url.label }}</label>
+	<h3>{{ form.homepage_url.label }}</h3>
 	<div class="input">
 	    <div class="error">{{ form.homepage_url.errors }}</div>
 	    <div class="homepage_url">{{ form.homepage_url }}</div>
