--- a/templates/main/elements/question.html
+++ b/templates/main/elements/question.html
@@ -12,7 +12,7 @@
 	</blockquote>
 
 	{% if user.is_authenticated and not question.is_answered %}
-	<p><a class="btn" href="{% url bashoneliners.main.views.oneliner_new question.pk %}">Post a one-liner that answers this!</a></p>
+	<p><a class="btn" href="{% url bashoneliners.main.views.oneliner_answer question.pk %}">Post a one-liner that answers this!</a></p>
 	{% endif %}
 
 	{% block related %}
