--- a/templates/main/pages/oneliner_edit.html
+++ b/templates/main/pages/oneliner_edit.html
@@ -12,14 +12,10 @@
 
 {% if question %}
 <div class="alert alert-info compact">
-    <p>This one-liner will be linked to the following question as a possible answer:</p>
-    <blockquote>
-	<p><a href="{% url bashoneliners.main.views.question question.pk %}">{{ question.summary }}</a></p>
-	<small>
-	    by <a href="{% url bashoneliners.main.views.profile question.user.pk %}"><span>{{ question.user.hackerprofile.display_name|default:question.user.username }}</span></a>
-	    on <span>{{ question.created_dt }}</span>
-	</small>
-    </blockquote>
+    <p>The new one-liner will be linked to the following question as a possible answer:</p>
+    {% with 1 as nobuttons %}
+    {% include 'main/elements/question.html' %}
+    {% endwith %}
 </div>
 {% endif %}
 
